<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="3dp" >
        <View
            android:id="@+id/notesPriority"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="right"
            android:background="@drawable/green_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="6dp">
            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:padding="5dp"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp" />
            <TextView
                android:id="@+id/notesSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:padding="5dp"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
            <TextView
                android:id="@+id/notesDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_start"
                android:padding="5dp"
                android:fontFamily="@font/product_sans_italic"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
